test_regress/t/t_display_wide_bad.out
%Error-UNSUPPORTED: t/t_display_wide_bad.v:23:7: Unsupported: Exceeded limit of 8192 bits for any $display-like arguments
   23 |       $write("[%0t] cyc==%0d crc=%d\n", $time, cyc, {crc, crc, crc, crc});   
      |       ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
